# klopca_finder

./: README.md  klopca2.html  klopca_finder.html  koordinate za nove klopce  main.py  pyproject.toml
