[tool.poetry]
name = "repl_python3_klopcafinder"
version = "0.1.0"
description = ""
authors = ["Mihalavric <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
tinydb = "^4.7.0"
tinyrecord = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
